--- a/.github/workflows/basic-checks.yaml
+++ b/.github/workflows/basic-checks.yaml
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm install
-      - run: npn run lint
+      - run: npm run lint
